<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textStyle="bold"
        android:gravity="center"
        android:textAllCaps="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popular_movies_btn"
        android:text="@string/popular_movies"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/stock_hawk_btn"
        android:text="@string/stock_hawk"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/build_it_bigger_btn"
        android:text="@string/build_it_bigger"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/make_your_own_app_material_btn"
        android:text="@string/make_your_app_material"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/go_ubiquitous_btn"
        android:text="@string/go_ubiquitous"
        style="@style/Widget.AppCompat.Button.Colored" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/capstone_btn"
        android:text="@string/capstone"
        style="@style/Widget.AppCompat.Button.Colored" />

</LinearLayout>
